# ChangeLog for app-misc/nanorc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Jul 2013; Justin Lecher <jlec@gentoo.org> nanorc-9999.ebuild,
  metadata.xml:
  Fix typo in EAPI

  10 Jan 2012; Justin Lecher <jlec@gentoo.org> nanorc-9999.ebuild,
  metadata.xml:
  Moved to eapi=4

*nanorc-9999 (16 May 2009)

  16 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +nanorc-9999.ebuild, +metadata.xml:
  initial checkin
