@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/nanorc
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 May 2014; Justin Lecher <jlec@gentoo.org> nanorc-9999.ebuild:
+  Fix repo uri; fix installtion procedure
 
   01 Jul 2013; Justin Lecher <jlec@gentoo.org> nanorc-9999.ebuild,
   metadata.xml:
